# map_distance_calculator

./: .gitignore  .npmrc  .tool-versions  README.md  WSL2-Setup-README.md  index.html  package-lock.json  package.json  pyproject.toml  server.py  setup-wsl-port.ps1  start-with-ngrok.js
src/js/: main.js
src/js/api/: distance.js  geocoding.js
src/js/config/: constants.js  settings.js
src/js/map/: google-maps.js
src/js/ui/: api-management.js  controls.js  result-display.js
src/js/utils/: math.js
src/scss/: main.scss
src/scss/base/: _reset.scss  _variables.scss
src/scss/components/: _api-management.scss  _buttons.scss  _map.scss  _result.scss
src/scss/layout/: _container.scss
src/scss/utilities/: _responsive.scss
